Change styling of scrollbars and content/sidebars. - Proper heights require css3 to work correctly (calc function)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -12,12 +12,18 @@ body{
   outline: 0;
 }
 #content{
+  height: 90%;
+  height: calc(100% - 100px);
+  margin-top: 40px;
+  margin-left: 200px;
+  padding: 20px;
+}
+#content > div{
   height: 100%;
   overflow-y: auto;
-  margin-top: 25px;
-  margin-left: 200px;
-  margin-bottom: 60px;
-  padding: 20px;
+}
+#content > div > h1{
+  margin-top: 10px;
 }
 #sidebar{
   margin-top: 50px;
@@ -42,6 +48,7 @@ body{
 }
 #sidebar_height_wrapper > ul{
   height: 90%;
+  height: calc(100% - 60px);
   overflow-y: auto;
 }
 #bottom_bar{
@@ -169,9 +176,13 @@ tr:hover .options{
   left: 0px;
 }
 /*** slider changes ***/
+.slider.slider-horizontal:hover .slider-track{
+  background: #ddd;
+}
 .slider.slider-horizontal .slider-track{
   height: 5px;
-  background: #ccc;
+  background: #eee;
+  transition: background 1s;
 }
 .slider-selection{
   background: #4BF;
